# grw

./: .dockerignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  advice-pane-q  build.rs
.github/workflows/: ci-cd.yml  ci.yml
.kiro/specs/commit-picker/: design.md  requirements.md  tasks.md
.kiro/specs/pane-module-refactor/: design.md  requirements.md  tasks.md
.kiro/specs/scc-migration/: design.md  requirements.md  tasks.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/: spring-cleaning.md
specs/001-i-would-like/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-i-would-like/contracts/: advice-panel-api.md
src/: config.rs  git.rs  git_operations.rs  git_worker.rs  lib.rs  llm.rs  logging.rs  main.rs  monitor.rs  pane.rs  shared_state.rs  ui.rs
src/git/: mod.rs  operations.rs  repository.rs  summary.rs  types.rs  worker.rs
src/pane/: advice_panel.rs  commit_picker_pane.rs  commit_summary_pane.rs  diff_pane.rs  file_tree_pane.rs  help_pane.rs  keys.rs  mod.rs  monitor_pane.rs  side_by_side_diff_pane.rs  status_bar_pane.rs
tests/: commit_picker_integration_tests.rs  commit_picker_shared_state_tests.rs  monitor_shared_state_integration_tests.rs  shared_state_integration_tests.rs
tests/contract/: test_advice_generation.rs  test_advice_panel_creation.rs  test_chat_functionality.rs  test_panel_visibility.rs
tests/integration/: test_chat_conversation.rs  test_help_system.rs  test_panel_opening.rs
